About section updared

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="row about-team">
           <div class="col-6">
             <div class="team-img">
-              <img src="./assets/Team.png" alt="">
+              <img src="./assets/about-sec.png" alt="">
             </div>
           </div>
           <div class="col-6">
