About Section modified

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
           <div class="col-6">
             <div class="team-hdr">
-              <p>About Our <span>Team</span></p>
+              <h1>About Our <span>Team</span></h1>
             </div>
             <p class="details">
               Jimmy is a former Naval Submariner and a veteran of the Gulf War, serving from 1996-2004 as
@@ -117,7 +117,7 @@
               broadcast journalism for several years as a backpack reporter, and all in one...
             </p>
             <div class="read-btn">
-              <a href="" class="readmore-btn">Read More</a>
+              <a href="" class="primary-btn">Read More</a>
             </div>
           </div>
         </div>
